plugins {
	id 'java-library'
	id 'eclipse'
	id 'org.springframework.boot' version '3.0.5'
}
apply plugin: 'io.spring.dependency-management'

group = 'com.gladikov'
version = ''
sourceCompatibility = '17'

eclipse {
	
    classpath {
      downloadSources=true
      downloadJavadoc=true
    }
}
//shadowJar{}



configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}
dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.h2database:h2'
	testImplementation 'com.h2database:h2:1.3.148'
	
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	
	implementation 'org.apache.plc4x:plc4j-api:0.10.0'
	runtimeOnly 'org.apache.plc4x:plc4j-driver-modbus:0.10.0'
	implementation 'org.apache.plc4x:plc4j-transport-test:0.10.0'
	testImplementation 'org.apache.plc4x:plc4j-driver-mock:0.10.0'
	
	
	implementation 'net.sf.supercsv:super-csv:2.4.0'
	implementation 'net.sourceforge.nekohtml:nekohtml:1.9.22'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	
	implementation 'org.webjars:bootstrap:3.3.7-1'
	implementation 'org.webjars:jquery:3.1.1'
	implementation 'org.webjars:datatables:1.13.1'
	implementation 'org.webjars:jquery-ui:1.13.2'
	implementation 'org.webjars:font-awesome:6.2.0'
	implementation 'org.webjars.npm:jquery-datetimepicker:2.5.21'
	
}

tasks.named('test') {
	useJUnitPlatform()
	systemProperty 'spring.profiles.active', 'test'
}

tasks.named('bootRun') {
	systemProperty 'spring.profiles.active', 'dev'
}




//tasks.register("integration") {
//    group = "application"
//    description = "Runs the Spring Boot application with the dev profile"
//    doFirst {
//        tasks.test.configure {
//            systemProperty("spring.profiles.active", "dev")
//        }
//    }
//    finalizedBy("bootRun")
//}


tasks.register("hell") {
	println 'hello, world'
}

